<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.login.view.LoginActivity">
<!--    <ImageView-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:id="@+id/account"-->
<!--        android:src="@drawable/ic_account_normal"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        app:tint="@color/white" />-->
    <include
        android:id="@+id/include"
        layout="@layout/action_bar_login_and_register" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/account"
        android:src="@mipmap/ic_android"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginBottom="10dp"

        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wan_android"
        android:layout_marginBottom="30dp"

        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="28dp"
            android:id="@+id/tv_account"
            android:background="@drawable/ic_account_normal"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/gray"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/edt_login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_account"
            android:layout_marginEnd="35dp"
            android:hint="@string/enter_user_name"
            android:singleLine="true"
            android:maxLines="1" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_alignParentEnd="true">
            <TextView
                android:id="@+id/account_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/str_no_account"
                android:textColor="#ff0000"/>
        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="28dp"
            android:id="@+id/password"
            android:background="@drawable/ic_password_normal"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/gray"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="wrap_content"
            android:imeOptions="actionDone"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:singleLine="true"
            android:hint="@string/enter_password"
            android:layout_toEndOf="@id/password"
            android:layout_toStartOf="@+id/password_visibility"
            android:maxLines="1" />

        <Button
            android:id="@+id/password_visibility"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_invisible"
             />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/password_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_no_pwd"
                android:visibility="invisible"
                android:textColor="#ff0000"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sign_up"
            android:layout_centerInParent="true"
            android:id="@+id/tv_sign_up"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_toEndOf="@id/tv_sign_up"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="4dp"
            android:layout_marginStart="3dp"
            android:background="@drawable/ic_next"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="64dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:enabled="false"
        android:text="@string/btn_login"
        android:background="@drawable/bg_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        />

</LinearLayout>