<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_register"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"

        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wan_android"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"

        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="28dp"
            android:id="@+id/tv_account"
            android:background="@drawable/ic_account_normal"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/gray"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/edt_login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_account"
            android:layout_marginEnd="35dp"
            android:hint="@string/enter_user_name"
            android:singleLine="true"
            android:maxLines="1" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_alignParentEnd="true">
            <TextView
                android:id="@+id/account_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/str_no_account"
                android:textColor="#ff0000"/>
        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="28dp"
            android:id="@+id/password"
            android:background="@drawable/ic_password_normal"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/gray"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:singleLine="true"
            android:hint="@string/enter_password"
            android:layout_toEndOf="@id/password"
            android:layout_toStartOf="@+id/password_visibility"
            android:maxLines="1" />

        <Button
            android:id="@+id/password_visibility"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_invisible"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/password_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_no_pwd"
                android:visibility="invisible"
                android:textColor="#ff0000"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="28dp"
            android:id="@+id/password_again"
            android:background="@drawable/ic_password_normal"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/gray"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/edt_login_password_again"
            android:layout_width="wrap_content"
            android:imeOptions="actionDone"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:singleLine="true"
            android:hint="@string/enter_password_again"
            android:layout_toEndOf="@id/password_again"
            android:layout_toStartOf="@+id/password_visibility_again"
            android:maxLines="1" />

        <Button
            android:id="@+id/password_visibility_again"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_invisible"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/password_warning_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_not_same"
                android:visibility="invisible"
                android:textColor="#ff0000"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="60dp"
            android:layout_height="30dp"

            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/tv_sign_in"
            android:textColor="@color/blue"
            android:textSize="15.5sp" />
<!--        <TextView-->
<!--            android:layout_width="15dp"-->
<!--            android:layout_height="15dp"-->
<!--            android:layout_toStartOf="@id/tv_sign_up"-->
<!--            android:backgroundTint="@color/blue"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="3dp"-->
<!--            android:background="@drawable/ic_next"/>-->
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:layout_toStartOf="@id/tv_sign_up"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_next"
            android:tint="@color/blue"
            tools:ignore="UseAppTint" />

    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="64dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:enabled="false"
        android:text="@string/btn_register"
        android:background="@drawable/bg_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        />

</LinearLayout>