<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".module.home.view.HomeActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/img_home"
                android:src="@drawable/selector_home"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_home"
                android:textSize="15sp"
                android:text="@string/str_home"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"

            android:layout_weight="1">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/img_knowledge"
                android:src="@drawable/selector_knowledge"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_knowledge"
                android:textSize="15sp"
                android:text="@string/str_knowledge_system"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/img_project"
                android:src="@drawable/selector_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_project"
                android:textSize="15sp"

                android:text="@string/str_project"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>